Ui Issue with BuddyPress friends suggestion widget Youzify spacing issue
https://3.basecamp.com/5798509/buckets/37558438/card_tables/cards/8047254631

--- a/public/css/buddypress-friend-follow-suggestion-public.css
+++ b/public/css/buddypress-friend-follow-suggestion-public.css
@@ -699,3 +699,36 @@ Youzify
 .bffs-wrapper.members-list.swiper-wrapper .item-meta li {
     display: inline-block !important;
 }
+
+.youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget ul#members-list{
+    padding-top: 0 !important;
+}
+
+.youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget>ul>li{
+    margin-bottom: 0;
+}
+
+.youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget ul.item-list li .item-avatar img{
+    border-radius: 100px;
+}
+
+.youzify-active .bffs_horizontal_layout.horizontal_swiper .bffs-wrapper.item-list {
+    flex-direction: unset;
+    gap: 0;
+    padding: 0 !important;    
+}
+.youzify-active .youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget .bffs_horizontal_layout {
+    border-radius: 7px;
+}
+.youzify-active .youzify-sidebar-column.youzify-sidebar .widget_bp_friend_suggestion_slider_widget,
+.youzify-active .youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget{
+    padding: 0 20px 20px;
+}
+.youzify-active .youzify-sidebar-column.youzify-sidebar .widget_bp_friend_suggestion_slider_widget h3.widget-title,
+.youzify-active .youzify-sidebar-column.youzify-sidebar .widget_bp_friend_follow_suggestion_widget h3.widget-title{
+    margin: 0 -20px 20px;
+}
+.youzify-active .widget_bp_friend_follow_suggestion_widget .bffs_horizontal_layout .generic-button a {
+    max-height: 40px !important;
+    gap: 5px;
+}
